# wallpaper_server

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docker/: Dockerfile_local  Dockerfile_master
src/: CMakeLists.txt  image_library.rs  main.cpp  main.rs  metrics.rs  parameters.rs
