[package]
name = "wallpaper_service"
version = "0.1.0"
authors = ["Alexander Zaitsev <zamazan4ik@tut.by>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.2"
actix-rt = "1.1.1"
actix-web = "2.0.0"
clap = "3.0.0-beta.1"
lazy_static = "1.4.0"
once-cell-regex = "0.1.1"
prometheus = "0.10.0"
rand = "0.7.3"
regex = "1.3.9"

[profile.release]
lto = true