[package]
name = "wallpaper_service"
version = "0.1.0"
authors = ["Alexander Zaitsev <zamazan4ik@tut.by>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-rt = "2.2.0"
actix-web = "3.3.2"
clap = "3.0.0-beta.4"
lazy_static = "1.4.0"
once-cell-regex = "0.2.1"
prometheus = "0.13.0"
rand = "0.8.4"
regex = "1.5.4"

[profile.release]
lto = true
